fixed CSS bug in navmenu by align text on the right and fixed console error regarding className of RecenterButton

--- a/src/styles/navBar.css
+++ b/src/styles/navBar.css
@@ -29,7 +29,8 @@
       list-style: none;
 
       & a {
-        font-size: 3rem;
+        font-size: 2.7rem;
+        text-align: right;
         text-decoration: none;
         color: var(--white);
         opacity: 50%;
